// $Id$
// $Name$

Image Picker  for D6 in DRUPAL-6--2, 20010-02-17
------------------------------------
by hutch, fixed bug in admin watermarks validation

Image Picker  for D6 in DRUPAL-6--2, 20010-02-13
------------------------------------
by hutch, added icons

Image Picker  for D6 in DRUPAL-6--2, 20010-01-17
------------------------------------
by hutch, E_NOTICE fixes

Image Picker  for D6 in DRUPAL-6--2, 20010-01-16
------------------------------------
by hutch, fixed admin menu suppress on iframe, ckeditor insert code added

Image Picker  for D6 in DRUPAL-6--2, 20010-01-04
------------------------------------
by hutch, improved insert code, added Used column to admin page

Image Picker  for D6 in DRUPAL-6--2, 2009-12-11
------------------------------------
by hutch, added more user configuration, numerous bugfixes

Image Picker  for D6 in DRUPAL-6--2, 2009-11-29
------------------------------------
by hutch, fixed error in admin/settings/general path

Image Picker  for D6 in DRUPAL-6--2, 2009-11-26
------------------------------------
by hutch, improved js and theming, removed inline js, fixed opera bug

Image Picker  for D6 in DRUPAL-6--2, 2009-11-13
------------------------------------
by hutch, fixed bug in paging

Image Picker  for D6 in DRUPAL-6--2, 2009-11-06
------------------------------------
by hutch, added imagepicker_postlet module

Image Picker  for D6 in DRUPAL-6--2, 2009-10-11
------------------------------------
by hutch, added quota by role

Image Picker  for D6 in DRUPAL-6--2, 2009-10-02
------------------------------------
by hutch, fixed bug in reporting in imagepicker_image_check_functions()

Image Picker  for D6 in DRUPAL-6--2, 2009-09-29
------------------------------------
by hutch, prevent exifinfo on gifs

Image Picker  for D6 in DRUPAL-6--2, 2009-09-27
------------------------------------
by hutch, added exif info, fixed noisy no-exif message

Image Picker  for D6 in DRUPAL-6--2, 2009-09-23
------------------------------------